@@ -31,6 +31,9 @@ Subscription Options
 .PP
 Application Options
 .TP
+\fB\-q\fR, \fB\-\-non-interactive\fR
+Don't ask for credentials interactively
+.TP
 \fB\-q\fR, \fB\-\-version\fR
 Display application version
 .TP
